# iforgor

./: Cargo.toml  README.md  exemple.toml
ichoose/: Cargo.toml  README.md
ichoose/src/: lib.rs  main.rs
iforgor/: Cargo.toml  README.md  exemple.toml
iforgor/src/: ctrlc_handler.rs  lib.rs
src/: lib.rs  main.rs  on_disk.rs  tui.rs
