[package]
name = "iforgor"
edition = "2021"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
base16ct = { version = "0.2.0", features = [ "alloc" ] }
clap = { version = "4.5.7", features = [ "derive" ] }
home = "0.5.9"
rand = "0.8.5"
ratatui = "0.27.0"
serde = { version = "1.0.203", features = [ "derive" ] }
sha3 = "0.10.8"
tempfile = "3.10.1"
toml = "0.8.14"
