[workspace]
members = [ "ichoose", "iforgor" ]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ichoose = { version = "0.2.1", path = "ichoose" }

anyhow = "1.0.86"
base16ct = { version = "0.2.0", features = [ "alloc" ] }
clap = { version = "4.5.7", features = [ "derive" ] }
ctrlc = "3.4.4"
glob = "0.3.1"
home = "0.5.9"
rand = "0.8.5"
ratatui = "0.27.0"
serde = { version = "1.0.203", features = [ "derive" ] }
sha3 = "0.10.8"
snailquote = "0.3.1"
tap = "1.0.1"
tempfile = "3.10.1"
toml = "0.8.14"
