[package]
name = "ichoose"
version = "0.2.0"
authors = [ "nanocryk" ]
description = "Interactive terminal list selection (lib+bin)"
edition = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = "https://github.com/nanocryk/iforgor"

[dependencies]
clap = { workspace = true }
ratatui = { workspace = true }
tap = { workspace = true }
