[package]
name = "iforgor"
version = "0.1.0"
authors = [ "nanocryk" ]
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
base16ct = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
home = { workspace = true }
ichoose = { workspace = true }
rand = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }
tap = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
