[package]
name = "iforgor"
version = "0.2.5"
authors = [ "nanocryk" ]
description = "The CLI tool for all those commands you forget about"
edition = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = "https://github.com/nanocryk/iforgor"

[dependencies]
anyhow = { workspace = true }
base16ct = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
glob = { workspace = true }
home = { workspace = true }
ichoose = { workspace = true }
rand = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }
snailquote = { workspace = true }
tap = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
